k8/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: keycloak
    meta.helm.sh/release-namespace: keycloak
  labels:
    app: keycloak
    app.kubernetes.io/managed-by: Helm
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.34.170.77.158.nip.io
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
